# dogus_cam

./: .env  .gitignore  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_empty.py  0002_create_users.py  0003_create_products.py  0004_create_categories.py  0005_create_warehouses_and_stock_movements.py  0006_create_partners.py  0007_create_quotes.py  0008_create_sales_orders.py  0009_create_sales_invoices.py  0010_create_ar_tables.py  0011_add_restock_level_to_products.py  0012_create_employees.py  0013_create_leave_tables.py  0014_add_organizations.py
backend/app/: main.py
backend/app/api/: ar.py  auth.py  categories.py  dashboard.py  employees.py  finance.py  health.py  leaves.py  orders.py  partners.py  products.py  quotes.py  sales_invoices.py  sales_orders.py  stock.py  stock_movements.py  users.py  warehouses.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  _mixins.py  ar.py  category.py  employee.py  finance.py  leave_request.py  leave_type.py  order.py  organization.py  partner.py  product.py  production_job.py  quote.py  sales_invoice.py  sales_order.py  stock_movement.py  user.py  user_org.py  warehouse.py
backend/app/schemas/: ar.py  category.py  employee.py  finance.py  leave.py  order.py  partner.py  product.py  quote.py  sales_invoice.py  sales_order.py  stock_movement.py  user.py  warehouse.py
backend/app/services/: ar_service.py  (+14 more)
backend/tests/: conftest.py
(+46 files in other folders)
